--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "server": "json-server --watch db.json --routes server-routes.json",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
@@ -13,6 +14,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "json-server": "^0.17.0",
+    "lorem-ipsum": "^2.0.4",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-property-decorator": "^9.1.2",
@@ -40,7 +42,6 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-mock": "~1.0.3",
     "vue-jest": "^5.0.0-0"
   },
   "gitHooks": {
